--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html, body {
-    font-size: 12px;
-    font-family:'Roboto Mono',monospace;
+    font-size: 14px;
+    font-family: 'Ubuntu';
 }
 
 .site {
@@ -20,9 +20,15 @@ html, body {
 
 img {
     max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -20px;
+    margin-bottom: -20px;
 }
 
 .footer {
-    margin-top: 24px;
+    margin-bottom: 50px;
+    margin-top: -20px;
     float: right;
 }
